--- a/locales/eo.yaml
+++ b/locales/eo.yaml
@@ -180,6 +180,17 @@ config:
   picker_organ: "Elekti Orgen-Dosieron"
   picker_midi: "Elekti MIDI-Dosieron (Laŭvola)"
 
+  lcd_title: "Agordo de LCD:"
+  lcd_button: "Agordi LCD-ojn"
+  lcd_tui_nav: " Eniro: Redakti/Aldoni | d: Forigi | Sagoj: Navigi/Ŝanĝi | Esc: Reen "
+  lcd_add: "+ Aldoni Ekranon"
+  lcd_display_label: "Ekrano %{num}"
+  lcd_id_label: "ID:"
+  lcd_type_label: "Tipo:"
+  lcd_background_label: "Fono:"
+  lcd_line1_label: "Linio 1:"
+  lcd_line2_label: "Linio 2:"
+
 loading:
   heading: "Ŝarĝante Orgen-Specimenojn..."
   window_title: "Ŝarĝante..."
@@ -217,6 +228,7 @@ tui_config:
   fmt_precache:    "Antaŭ-kaŝmemoro:  %{val}"
   fmt_convert:     "Konv. al 16-bita: %{val}"
   fmt_tuning:      "Orig. Agordo:     %{val}"
+  fmt_lcd_config:  "Agordo de LCD: %{count} ekranoj"
   
   val_on: "ON"
   val_off: "OFF"
