--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -180,6 +180,17 @@ config:
   picker_organ: "Orgonafájl Kiválasztása"
   picker_midi: "MIDI Fájl Kiválasztása (Opcionális)"
 
+  lcd_title: "LCD Konfiguráció:"
+  lcd_button: "LCD-k Konfigurálása"
+  lcd_tui_nav: " Enter: Szerk/Hozzáad | d: Töröl | Nyilak: Navigálás/Módosítás | Esc: Vissza "
+  lcd_add: "+ Új Kijelző"
+  lcd_display_label: "Kijelző %{num}"
+  lcd_id_label: "Azonosító:"
+  lcd_type_label: "Típus:"
+  lcd_background_label: "Háttér:"
+  lcd_line1_label: "1. sor:"
+  lcd_line2_label: "2. sor:"
+
 loading:
   heading: "Orgonaminták Betöltése..."
   window_title: "Betöltés..."
@@ -217,6 +228,7 @@ tui_config:
   fmt_precache:    "Gyorsítótár:      %{val}"
   fmt_convert:     "16 bitre konv.:   %{val}"
   fmt_tuning:      "Eredeti Hangolás: %{val}"
+  fmt_lcd_config:  "LCD Konfiguráció: %{count} kijelző"
   
   val_on: "BE"
   val_off: "KI"
