--- a/locales/nb.yaml
+++ b/locales/nb.yaml
@@ -180,6 +180,17 @@ config:
   picker_organ: "Velg Orgelfil"
   picker_midi: "Velg MIDI-fil (Valgfritt)"
 
+  lcd_title: "LCD-konfigurasjon:"
+  lcd_button: "Konfigurer LCD-er"
+  lcd_tui_nav: " Enter: Rediger/Legg til | d: Slett | Piler: Naviger/Endre | Esc: Tilbake "
+  lcd_add: "+ Legg til Skjerm"
+  lcd_display_label: "Skjerm %{num}"
+  lcd_id_label: "ID:"
+  lcd_type_label: "Type:"
+  lcd_background_label: "Bakgrunn:"
+  lcd_line1_label: "Linje 1:"
+  lcd_line2_label: "Linje 2:"
+
 loading:
   heading: "Laster Orgelsamples..."
   window_title: "Laster..."
@@ -217,6 +228,7 @@ tui_config:
   fmt_precache:    "Pre-cache:        %{val}"
   fmt_convert:     "Konv. til 16-bit: %{val}"
   fmt_tuning:      "Orig. Stemming:   %{val}"
+  fmt_lcd_config:  "LCD-konfigurasjon: %{count} skjermer"
   
   val_on: "PÅ"
   val_off: "AV"
